# haskell-while-interpreter

./: .gitignore  README.md  haskell-while-interpreter.cabal
app/: Main.hs
example_programs/: collatz.while  factorial.while  fibonacci.while  gcd.while  primes.while
src/: ArithTest.hs  Expr.hs  WhileLanguage.hs  WhileProgram.hs
src/Interpreter/: ArithmeticInterp.hs  BoolInterp.hs  WhileInterpreter.hs
src/WhileLang/: Interpreter.hs  Parser.hs  Syntax.hs
src/WhileLang/Interpreter/: Arithmetic.hs  Boolean.hs  Command.hs  Core.hs  Runtime.hs
src/WhileLang/Parser/: Parser.hs
test/Interpreter/: ArithmeticInterpSpec.hs
test/WhileLang/: InterpreterSpec.hs  ParserSpec.hs
