cabal-version:      3.0
name:               haskell-while-interpreter
version:            0.1.0.0
synopsis:           A While Programming Language Interpreter Implemented in Haskell
-- description:
homepage:
    https://github.com/nicholaslivingstone/haskell-while-interpreter

license:            GPL-3.0-only
license-file:       LICENSE
author:             Nicholas Livingstone
maintainer:         nlivingsto@unm.edu
-- copyright:
category:           Development
build-type:         Simple
-- extra-doc-files:
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable haskell-while-interpreter
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   src
    other-modules:    Expr, Interpreter, Parser
    -- other-extensions:
    build-depends:    base,
                      megaparsec
    hs-source-dirs:   app
    default-language: Haskell2010
