cabal-version: 3.0
name: haskell-while-interpreter
version: 0.1.0.0
synopsis: A While Programming Language Interpreter Implemented in Haskell
-- description:
homepage:
  https://github.com/nicholaslivingstone/haskell-while-interpreter

license: GPL-3.0-only
license-file: LICENSE
author: Nicholas Livingstone
maintainer: nlivingsto@unm.edu
-- copyright:
category: Development
build-type: Simple

-- extra-doc-files:
-- extra-source-files:
common warnings
  ghc-options: -Wall

library while-interpreter-lib
  import: warnings
  exposed-modules:
    WhileLang.Interpreter
    WhileLang.Parser.Parser
    WhileLang.Syntax

  -- other-extensions:
  build-depends:
    base,
    containers,
    megaparsec,
    mtl,

  hs-source-dirs: src
  default-language: Haskell2010

executable while-interpreter
  import: warnings
  main-is: Main.hs
  hs-source-dirs: src
  -- other-extensions:
  build-depends:
    base,
    containers,
    megaparsec,
    mtl,
    while-interpreter-lib,

  hs-source-dirs: app
  default-language: Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
    test

  other-modules:
    WhileLang.InterpreterSpec

  -- other-extensions:
  build-depends:
    QuickCheck,
    base,
    containers,
    hspec,
    megaparsec,
    mtl,
    while-interpreter-lib,

  hs-source-dirs: app
  default-language: Haskell2010
  build-tool-depends: hspec-discover:hspec-discover
